Move partials to modules

--- a/_pages/index/_upcoming-events.html
+++ b/_pages/index/_upcoming-events.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="theater col-md-6">
-                {% include partials/photo.html photo="photos/career_day_1.png" alt="Staff at Samohi's Career Day" %}
+                {% include modules/photo.html photo="photos/career_day_1.png" alt="Staff at Samohi's Career Day" %}
             </div>
 
             <div class="events col-md-6">
