Add color scheme and make use of it

--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -14,19 +14,19 @@
                 <div class="row">
                     <div class="col-xs-4">
                         <div class="actor top-1">
-                            <img src="http://placehold.it/125x125" />
+                            <img alt="Leadership" src="/assets/images/icons/Leadership.png" />
                             <p>Leadership</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="actor top-2">
-                            <img src="http://placehold.it/125x125" />
+                            <img alt="Collaboration" src="/assets/images/icons/Collaboration.png" />
                             <p>Collaboration</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="actor top-3">
-                            <img src="http://placehold.it/125x125" />
+                            <img alt="Critical Thinking" src="/assets/images/icons/CriticalThinking.png" />
                             <p>Critical Thinking</p>
                         </div>
                     </div>
