Begin building program stats

--- a/_pages/index/_program-statistics.html
+++ b/_pages/index/_program-statistics.html
@@ -1,5 +1,5 @@
-<div class="program-statistics">
-    <h2>Program Statistics</h2>
-
-    {% include partials/carousel.html title="program-stats" content="partials/stats.html" controls=true size=4 %}
+<div class="program-statistics page-section">
+    <div class="container">
+        {% include modules/carousel.html title="program-stats" class="transparent" content="partials/stats.html" controls=true size=site.data.stats.size %}
+    </div>
 </div>
