--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -28,4 +28,5 @@ jumbotron:
     {% include_relative _program-overview.html %}
     {% include_relative _upcoming-events.html %}
     {% include_relative _program-statistics.html %}
+    {% include_relative _past-companies.html %}
 </main>
