--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -29,4 +29,5 @@ jumbotron:
     {% include_relative _upcoming-events.html %}
     {% include_relative _program-statistics.html %}
     {% include_relative _past-companies.html %}
+    {% include_relative _program-staff.html %}
 </main>
