Style and write quotes section

--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -28,6 +28,7 @@ jumbotron:
     {% include_relative _program-overview.html %}
     {% include_relative _upcoming-events.html %}
     {% include_relative _program-statistics.html %}
+    {% include_relative _alumni-quotes.html %}
     {% include_relative _past-companies.html %}
     {% include_relative _program-staff.html %}
 </main>
