Fix quotes when a baseURL exists

--- a/_pages/index/_upcoming-events.html
+++ b/_pages/index/_upcoming-events.html
@@ -1,4 +1,4 @@
-<section class="upcoming-events page-section">
+<section class="upcoming-events page-section page-section--alt">
     <div class="container">
         <div class="row">
             <div class="theater col-md-6">
