Restructure some Sass to be reusable

--- a/_pages/index/_alumni-quotes.html
+++ b/_pages/index/_alumni-quotes.html
@@ -5,6 +5,6 @@
             <h3>Here's what our alumni have to say</h3>
         </div>
 
-        <div id="quotebook" class="quotebook rsorter"></div>
+        <div id="quotebook" class="quotebook css-table rsorter"></div>
     </div>
 </section>
