Add YTP's awards

--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -30,5 +30,6 @@ jumbotron:
     {% include_relative _program-statistics.html %}
     {% include_relative _alumni-quotes.html %}
     {% include_relative _past-companies.html %}
+    {% include_relative _program-awards.html %}
     {% include_relative _program-staff.html %}
 </main>
