--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -14,19 +14,19 @@
                 <div class="row">
                     <div class="col-xs-4">
                         <div class="actor top-1">
-                            <img alt="Leadership" src="{{ site.baseurl }}/assets/images/icons/Leadership.png" />
+                            <div class="po-icon leadership"></div>
                             <p>Leadership</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="actor top-2">
-                            <img alt="Collaboration" src="{{ site.baseurl }}/assets/images/icons/Collaboration.png" />
+                            <div class="po-icon collaboration"></div>
                             <p>Collaboration</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="actor top-3">
-                            <img alt="Critical Thinking" src="{{ site.baseurl }}/assets/images/icons/CriticalThinking.png" />
+                            <div class="po-icon thinking"></div>
                             <p>Critical Thinking</p>
                         </div>
                     </div>
