Update program overview icons
- All of the icons have transparent padding to ensure they are all remain the same size

--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -30,6 +30,19 @@
                             <p>Critical Thinking</p>
                         </div>
                     </div>
+
+                    <div class="col-xs-4 col-xs-offset-2">
+                        <div class="actor top-2">
+                            <div class="po-icon chemistry"></div>
+                            <p>Collaboration</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="actor top-3">
+                            <div class="po-icon supergirl"></div>
+                            <p>Critical Thinking</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
