--- a/_pages/index/_past-companies.html
+++ b/_pages/index/_past-companies.html
@@ -1,10 +1,9 @@
 <section class="past-companies page-section">
     <div class="container">
-        <h2>Previous Teams</h2>
-
-        <article class="section-spacer">
-            <p>Over the past 3 years, we have had 13 companies built and started.</p>
-        </article>
+        <div class="blackboard">
+            <h2 class="section-header">Previous Teams</h2>
+            <h3>Our students have built 13 companies during our 6 week program</h3>
+        </div>
 
         <div class="holding-company">
             {% for company in site.data.teams %}
