--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -12,35 +12,35 @@
 
             <div class="canvas col-md-6">
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-6 col-sm-4">
                         <div class="actor top-1">
-                            <div class="po-icon leadership"></div>
+                            <div class="po-icon rocket"></div>
+                            <p>Lean Start-up</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-4">
+                        <div class="actor top-2">
+                            <div class="po-icon supergirl"></div>
                             <p>Leadership</p>
                         </div>
                     </div>
-                    <div class="col-xs-4">
-                        <div class="actor top-2">
-                            <div class="po-icon collaboration"></div>
-                            <p>Collaboration</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-6 col-sm-4">
                         <div class="actor top-3">
-                            <div class="po-icon thinking"></div>
-                            <p>Critical Thinking</p>
+                            <div class="po-icon chat"></div>
+                            <p>Collaboration</p>
                         </div>
                     </div>
 
-                    <div class="col-xs-4 col-xs-offset-2">
+                    <div class="col-xs-6 col-sm-4 col-sm-offset-2">
                         <div class="actor top-2">
-                            <div class="po-icon chemistry"></div>
-                            <p>Collaboration</p>
+                            <div class="po-icon gears"></div>
+                            <p>Critical Thinking</p>
                         </div>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-12 col-sm-4">
                         <div class="actor top-3">
-                            <div class="po-icon supergirl"></div>
-                            <p>Critical Thinking</p>
+                            <div class="po-icon chemistry"></div>
+                            <p>Coding</p>
                         </div>
                     </div>
                 </div>
