Add more banners to the header carousel

--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -22,6 +22,18 @@ jumbotron:
         position:
           - viewsize: 0
             location: center
+      - image: assets/images/banners/home_3.jpg
+        position:
+          - viewsize: 992px
+            location: center -80px
+      - image: assets/images/banners/home_4.jpg
+        position:
+          - viewsize: 0
+            location: center
+      - image: assets/images/banners/home_5.jpg
+        position:
+          - viewsize: 0
+            location: center
 ---
 
 <main>
