Change order of program overview icons

--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="blackboard col-md-6">
                 <h2 class="section-header">Program Overview</h2>
-                <h3>Learn coding, graphic design, and lean start-up methods</h3>
+                <h3>Learn lean start-up methods, coding, and graphic design</h3>
                 <article>
                     <p>Apply critical thinking skills. Collaborate and accept leadership roles. The competitive application process includes an online application, in depth interview, and a comprehensive assessment by a selection panel</p>
                     <p><strong>Application period: 01/01/2016 - 03/15/2016</strong></p>
@@ -19,28 +19,27 @@
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4">
-                        <div class="actor top-2">
-                            <div class="po-icon supergirl"></div>
-                            <p>Leadership</p>
+                        <div class="actor top-3">
+                            <div class="po-icon chemistry"></div>
+                            <p>Coding</p>
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4">
-                        <div class="actor top-3">
-                            <div class="po-icon chat"></div>
-                            <p>Collaboration</p>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-6 col-sm-4 col-sm-offset-2">
                         <div class="actor top-2">
                             <div class="po-icon gears"></div>
                             <p>Critical Thinking</p>
                         </div>
                     </div>
+                    <div class="col-xs-6 col-sm-4 col-sm-offset-2">
+                        <div class="actor top-2">
+                            <div class="po-icon supergirl"></div>
+                            <p>Leadership</p>
+                        </div>
+                    </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="actor top-3">
-                            <div class="po-icon chemistry"></div>
-                            <p>Coding</p>
+                            <div class="po-icon chat"></div>
+                            <p>Collaboration</p>
                         </div>
                     </div>
                 </div>
