Program overview icon sizes update

--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -13,31 +13,31 @@
             <div class="canvas col-md-6">
                 <div class="row">
                     <div class="col-xs-6 col-sm-4">
-                        <div class="actor top-1">
+                        <div class="actor">
                             <div class="po-icon rocket"></div>
                             <p>Lean Start-up</p>
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4">
-                        <div class="actor top-3">
+                        <div class="actor">
                             <div class="po-icon chemistry"></div>
                             <p>Coding</p>
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4">
-                        <div class="actor top-2">
+                        <div class="actor">
                             <div class="po-icon gears"></div>
                             <p>Critical Thinking</p>
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-sm-offset-2">
-                        <div class="actor top-2">
+                        <div class="actor">
                             <div class="po-icon supergirl"></div>
                             <p>Leadership</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4">
-                        <div class="actor top-3">
+                        <div class="actor">
                             <div class="po-icon chat"></div>
                             <p>Collaboration</p>
                         </div>
