More requested changes
- Content update for awards
- Staff title updates
- Alumni quotes should be static order
- Give past companies more space on desktop view

--- a/_pages/index/_past-companies.html
+++ b/_pages/index/_past-companies.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="blackboard">
             <h2 class="section-header">Previous Teams</h2>
-            <h3>Our students have built 13 companies during our 6 week program</h3>
+            <h3>Our students have built 13 companies during our 6-week program</h3>
         </div>
 
         <div class="holding-company">
