--- a/_pages/index/_program-staff.html
+++ b/_pages/index/_program-staff.html
@@ -1,6 +1,8 @@
 <section class="program-staff page-section">
     <div class="container">
-        <h1>Program Staff</h1>
+        <div class="blackboard">
+            <h2 class="section-header">Program Staff</h2>
+        </div>
 
         <div class="staff-roster row">
             {% for staff in site.data.staff %}
