Make the header carousel taller

--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -15,7 +15,7 @@ jumbotron:
           - viewsize: 0
             location: top center
           - viewsize: 992px
-            location: center -70px
+            location: center -50px
           - viewsize: 1600px
             location: center -200px
       - image: assets/images/banners/home_2.jpg
@@ -25,15 +25,21 @@ jumbotron:
       - image: assets/images/banners/home_3.jpg
         position:
           - viewsize: 992px
-            location: center -80px
+            location: center -30px
+          - viewsize: 1600px
+            location: center -280px
       - image: assets/images/banners/home_4.jpg
         position:
           - viewsize: 0
             location: center
+          - viewsize: 1600px
+            location: center -200px
       - image: assets/images/banners/home_5.jpg
         position:
           - viewsize: 0
             location: center
+          - viewsize: 1600px
+            location: center -200px
 ---
 
 <main>
