Default position for carousel image

--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -24,6 +24,8 @@ jumbotron:
             location: center
       - image: assets/images/banners/home_3.jpg
         position:
+          - viewsize: 0
+            location: center
           - viewsize: 992px
             location: center -30px
           - viewsize: 1600px
