Monolithic commit with all the changes requested

--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -1,46 +1,40 @@
 <section class="program-overview page-section">
-    <div class="container">
-        <div class="row">
-            <div class="blackboard col-md-6">
-                <h2 class="section-header">Program Overview</h2>
-                <h3>Learn lean start-up methods, coding, and graphic design</h3>
-                <article>
-                    <p>Apply critical thinking skills. Collaborate and accept leadership roles. The competitive application process includes an online application, in depth interview, and a comprehensive assessment by a selection panel</p>
-                    <p><strong>Application period: 01/01/2016 - 03/15/2016</strong></p>
-                </article>
-            </div>
+    <div class="container" style="text-align: center;">
+        <div class="blackboard" style="display: inline-block; margin: 0">
+            <h2 class="section-header" style="text-align: left">Program Overview</h2>
+            <h3>Learn lean start-up methods, coding, UI/UX, &amp; leadership skills</h3>
+        </div>
 
-            <div class="canvas col-md-6">
-                <div class="row">
-                    <div class="col-xs-6 col-sm-4">
-                        <div class="actor">
-                            <div class="po-icon rocket"></div>
-                            <p>Lean Start-up</p>
-                        </div>
+        <div class="canvas">
+            <div class="row">
+                <div class="col-xs-6 col-md-2 col-md-offset-1">
+                    <div class="actor">
+                        <div class="po-icon rocket"></div>
+                        <p>Lean Start-up Methods</p>
                     </div>
-                    <div class="col-xs-6 col-sm-4">
-                        <div class="actor">
-                            <div class="po-icon chemistry"></div>
-                            <p>Coding</p>
-                        </div>
+                </div>
+                <div class="col-xs-6 col-md-2">
+                    <div class="actor">
+                        <div class="po-icon chemistry"></div>
+                        <p>Coding</p>
                     </div>
-                    <div class="col-xs-6 col-sm-4">
-                        <div class="actor">
-                            <div class="po-icon supergirl"></div>
-                            <p>Leadership</p>
-                        </div>
+                </div>
+                <div class="col-xs-6 col-md-2">
+                    <div class="actor">
+                        <div class="po-icon supergirl"></div>
+                        <p>Leadership</p>
                     </div>
-                    <div class="col-xs-6 col-sm-4 col-sm-offset-2">
-                        <div class="actor">
-                            <div class="po-icon gears"></div>
-                            <p>Critical Thinking</p>
-                        </div>
+                </div>
+                <div class="col-xs-6 col-md-2">
+                    <div class="actor">
+                        <div class="po-icon gears"></div>
+                        <p>Critical Thinking</p>
                     </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="actor">
-                            <div class="po-icon chat"></div>
-                            <p>Collaboration</p>
-                        </div>
+                </div>
+                <div class="col-xs-12 col-md-2">
+                    <div class="actor">
+                        <div class="po-icon chat"></div>
+                        <p>Collaboration</p>
                     </div>
                 </div>
             </div>
