--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -46,6 +46,7 @@ jumbotron:
 
 <main>
     {% include_relative _program-overview.html %}
+    {% include_relative _application-process.html %}
     {% include_relative _upcoming-events.html %}
     {% include_relative _program-statistics.html %}
     {% include_relative _alumni-quotes.html %}
