--- a/_pages/index/_program-awards.html
+++ b/_pages/index/_program-awards.html
@@ -2,6 +2,7 @@
     <div class="container">
         <div class="blackboard">
             <h2 class="section-header">Awards</h2>
+            <h3>People are talking about us</h3>
         </div>
         <div class="trophy-case row css-table">
             {% for award in site.awards %}
