--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -7,32 +7,38 @@
 
         <div class="row process">
             <div class="col-xs-12 col-sm-6 col-md-3">
-                <img src="{{ site.baseurl }}/assets/images/icons/Application.png" alt="" />
+                <a href="https://www.surveymonkey.com/r/smytp2016">
+                    <img src="{{ site.baseurl }}/assets/images/icons/Application.png" alt="" />
+                </a>
                 <div class="step">
                     <p>1</p>
                 </div>
-                <p>Online Application</p>
+                <p class="title">Online Application</p>
+                <p>01/01/16 - 03/15/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Interview.png" alt="">
                 <div class="step">
                     <p>2</p>
                 </div>
-                <p>In-depth Interview</p>
+                <p class="title">In-depth Interview</p>
+                <p>02/01/16 - 04/01/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/ReviewCommittee.png" alt="">
                 <div class="step">
                     <p>3</p>
                 </div>
-                <p>Review by Selection Committee</p>
+                <p class="title">Review by Selection Committee</p>
+                <p>03/01/16 - 04/01/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Letter.png" alt="">
                 <div class="step">
                     <p>4</p>
                 </div>
-                <p>Letters Indicating Admissions Decision</p>
+                <p class="title">Letters Indicating Admissions Decision</p>
+                <p>04/01/16 - 04/15/16</p>
             </div>
         </div>
     </div>
