--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -8,13 +8,15 @@
         <div class="row process">
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <a href="https://www.surveymonkey.com/r/smytp2016">
-                    <img src="{{ site.baseurl }}/assets/images/icons/Application.png" alt="" />
+                    <img src="{{ site.baseurl }}/assets/images/icons/Application.png"
+                         alt=""
+                         style="height: 85px; width: 85px; margin-top: 15px;" />
                 </a>
                 <div class="step">
                     <p>1</p>
                 </div>
                 <p class="title">Online Application</p>
-                <p>01/01/16 - 03/15/16</p>
+                <p>The application is available frm 01/01/16 - 03/15/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Interview.png" alt="">
@@ -22,7 +24,7 @@
                     <p>2</p>
                 </div>
                 <p class="title">In-depth Interview</p>
-                <p>02/01/16 - 04/01/16</p>
+                <p>Applicants will be interviewed between 02/01/16 - 04/01/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/ReviewCommittee.png" alt="">
@@ -30,7 +32,7 @@
                     <p>3</p>
                 </div>
                 <p class="title">Review by Selection Committee</p>
-                <p>03/01/16 - 04/01/16</p>
+                <p>The committee will review all applicants by 04/07/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Letter.png" alt="">
@@ -38,7 +40,7 @@
                     <p>4</p>
                 </div>
                 <p class="title">Letters Indicating Admissions Decision</p>
-                <p>04/01/16 - 04/15/16</p>
+                <p>Letters will be emailed by 04/15/16</p>
             </div>
         </div>
     </div>
