--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -3,7 +3,7 @@ layout: jumbotron-header
 permalink: /
 jumbotron:
   text: >
-    #### Summer 2016
+    ### Summer 2016
   button:
     text: Apply
     url: https://www.surveymonkey.com/r/smytp2016
