--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -16,7 +16,7 @@
                     <p>1</p>
                 </div>
                 <p class="title">Online Application</p>
-                <p>The application is available frm 01/01/16 - 03/15/16</p>
+                <p>Application closes 3/15/16 at 11:59 pm</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Interview.png" alt="">
@@ -24,7 +24,7 @@
                     <p>2</p>
                 </div>
                 <p class="title">In-depth Interview</p>
-                <p>Applicants will be interviewed between 02/01/16 - 04/01/16</p>
+                <p>Applicant interviews between 02/01/16 – 04/01/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/ReviewCommittee.png" alt="">
@@ -32,7 +32,7 @@
                     <p>3</p>
                 </div>
                 <p class="title">Review by Selection Committee</p>
-                <p>The committee will review all applicants by 04/07/16</p>
+                <p>Admission decisions are made by 04/07/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Letter.png" alt="">
@@ -40,7 +40,7 @@
                     <p>4</p>
                 </div>
                 <p class="title">Letters Indicating Admissions Decision</p>
-                <p>Letters will be emailed by 04/15/16</p>
+                <p>Admission notices are emailed by 04/15/16</p>
             </div>
         </div>
     </div>
