--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -16,7 +16,7 @@
                     <p>1</p>
                 </div>
                 <p class="title">Online Application</p>
-                <p>Application closes 3/15/16 at 11:59 pm</p>
+                <p>Application closes 3/15/16 11:59 pm</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Interview.png" alt="">
@@ -24,23 +24,25 @@
                     <p>2</p>
                 </div>
                 <p class="title">In-depth Interview</p>
-                <p>Applicant interviews between 02/01/16 – 04/01/16</p>
+                <p>Applicant interviews 02/01/16 – 04/01/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
-                <img src="{{ site.baseurl }}/assets/images/icons/ReviewCommittee.png" alt="">
+                <img src="{{ site.baseurl }}/assets/images/icons/ReviewCommittee.png"
+                     alt=""
+                     style="height: 130px; width: 130px; margin-bottom: 5px; margin-top: -20px;">
                 <div class="step">
                     <p>3</p>
                 </div>
                 <p class="title">Review by Selection Committee</p>
-                <p>Admission decisions are made by 04/07/16</p>
+                <p>Admission decisions by 04/14/16</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img src="{{ site.baseurl }}/assets/images/icons/Letter.png" alt="">
                 <div class="step">
                     <p>4</p>
                 </div>
-                <p class="title">Letters Indicating Admissions Decision</p>
-                <p>Admission notices are emailed by 04/15/16</p>
+                <p class="title">Admission Decision Letters</p>
+                <p>Admission notices emailed by 04/15/16</p>
             </div>
         </div>
     </div>
