--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -44,7 +44,7 @@
                     <p>4</p>
                 </div>
                 <p class="title">Admission Decision Letters</p>
-                <p>Admission notices emailed by 04/15/16</p>
+                <p>Acceptance &amp; rejection notices emailed by 04/15/16</p>
             </div>
         </div>
     </div>
