--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -3,7 +3,7 @@ layout: jumbotron-header
 permalink: /
 jumbotron:
   text: >
-    ## Summer 2016
+    <h2 style="color: #A1C435">Summer 2016</h2>
   button:
     text: Apply
     url: https://www.surveymonkey.com/r/smytp2016
