Make "6 Weeks" a header

--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -6,7 +6,8 @@
         </div>
 
         <article>
-            <p><strong>6 Weeks</strong> &mdash; What’s a goal without a deadline? In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in hyper-speed pace, but the achievement is worth the effort!</p>
+            <h4>6 Weeks</h4>
+            <p>What’s a goal without a deadline? In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in hyper-speed pace, but the achievement is worth the effort!</p>
         </article>
     </div>
 </section>
