Add year to section header

--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -1,7 +1,7 @@
 <section class="page-section">
     <div class="container">
         <div class="blackboard">
-            <h2 class="section-header">Summer Program</h2>
+            <h2 class="section-header">2016 Summer Program</h2>
             <h3>Summer Program 06/13/16 - 07/22/16</h3>
         </div>
 
