--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -7,7 +7,7 @@
 
         <article>
             <h4>6 Weeks</h4>
-            <p>What’s a goal without a deadline? In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in hyper-speed pace, but the achievement is worth the effort!</p>
+            <p>What’s a goal without a deadline? In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in lightspeed pace, but the achievement is worth the effort!</p>
         </article>
     </div>
 </section>
